Improve implementation slightly